# shooting-stars

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
.github/workflows/: build.yml
ShootingStars-ThroughTheSpace/: ShootingStars.cpp  ShootingStars.hpp  main.cpp
include/shooting-stars/: core.hpp
src/: MSingleton.hpp  core.cpp  m_singleton.hpp  main.cpp  shooting-stars.cpp  shooting-stars.hpp
